added landscaping content, two column grid class, uploaded hero images

--- a/hocotts/blog.html
+++ b/hocotts/blog.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hocott's Gardening Center</title>
+  <title>Hocott's Gardening Blog</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="description" content="Discover the beauty of your outdoor space with our expert landscaping services. From vibrant garden designs to meticulous lawn care, we're here to cultivate your dream garden.">
+  <meta name="description" content="Learn how to step up your gardening game.">
   <meta name="author" content="Kristena Merritt">
   <meta name="robots" content="noindex">
 
-  <meta property="og:title" content="Hocott's Garden Center">
+  <meta property="og:title" content="Hocott's Gardening Blog">
   <meta property="og:image" content="assets/includes/social-image.jpg">
   <meta property="og:image:alt" content="Hocott's Garden Center store owners smiling around geraniums.">
 
@@ -48,41 +48,10 @@
   </header>
   <div id="primary-hero">
     <section id="cta-section">
-      <h2>Build a Raised Garden Bed!</h2>
-      <a href="#">Get Started</a>
+      <h2>Become a Garden Guru: Follow the Blog</h2>
     </section>
   </div>
   <main>
-    <section class="services">
-      <h2>Landscaping Services</h2>
-      <div class="grid image-gallery">
-        <article>
-          <img src="assets/img/lawn-care-200.jpg" alt=""/>
-          <a href="#">Lawn Care</a>
-        </article>
-        <article>
-          <img src="assets/img/low-impact-design-200.jpg" alt=""/>
-          <a href="#">Low-Impact Design</a>
-        </article>
-        <article>
-          <img src="assets/img/garden-design-200.jpg" alt=""/>
-          <a href="#">Garden Design</a>
-        </article>
-        <article>
-          <img src="assets/img/shrub-care-200.jpg" alt=""/>
-          <a href="#">Tree/Shrub Care</a>
-        </article>
-        <article>
-          <img src="assets/img/consultation-200.jpg" alt=""/>
-          <a href="#">Consultations</a>
-        </article>
-        <article>
-          <img src="assets/img/irrigation-200.jpg" alt=""/>
-          <a href="#">Irrigation Installation</a>
-        </article>
-      </div>
-      <a href="#" class="cta-button">Explore Services</a>
-    </section>
     <section id="blog">
       <div class ="container">
         <h2>Garden Guru Blog</h2>
