--- a/hocotts/gallery.html
+++ b/hocotts/gallery.html
@@ -48,8 +48,7 @@
   </header>
   <div id="primary-hero">
     <section id="cta-section">
-      <h2>Build a Raised Garden Bed!</h2>
-      <a href="#">Get Started</a>
+      <h2>Explore the Plant Gallery</h2>
     </section>
   </div>
   <main>
