--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -49,7 +49,7 @@
   <div id="primary-hero">
     <section id="cta-section">
       <h2>Build a Raised Garden Bed!</h2>
-      <a href="#">Get Started</a>
+      <a href="#" title="" class="cta-button">Get Started</a>
     </section>
   </div>
   <main>
