added subpage background images

--- a/hocotts/about.html
+++ b/hocotts/about.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hocott's Gardening Center</title>
+  <title>About Us | Hocott's Gardening Center Little Rock, AR</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="description" content="Discover the beauty of your outdoor space with our expert landscaping services. From vibrant garden designs to meticulous lawn care, we're here to cultivate your dream garden.">
+  <meta name="description" content="From conceptualization to execution, our team of skilled landscapers ensures every detail is meticulously attended to. ">
   <meta name="author" content="Kristena Merritt">
   <meta name="robots" content="noindex">
 
@@ -46,7 +46,7 @@
     </div>
   </div>
   </header>
-  <div id="primary-hero">
+  <div id="about-hero">
     <section id="cta-section">
       <h2>About Us!</h2>
     </section>
