--- a/hocotts/blog.html
+++ b/hocotts/blog.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   </header>
-  <div id="primary-hero">
+  <div id="blog-hero">
     <section id="cta-section">
       <h2>Become a Garden Guru: Follow the Blog</h2>
     </section>
