--- a/hocotts/contact.html
+++ b/hocotts/contact.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hocott's Gardening Center</title>
+  <title>Contact Hocott's Gardening Center</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="description" content="Discover the beauty of your outdoor space with our expert landscaping services. From vibrant garden designs to meticulous lawn care, we're here to cultivate your dream garden.">
+  <meta name="description" content="Schedule a free landscaping consultation today!">
   <meta name="author" content="Kristena Merritt">
   <meta name="robots" content="noindex">
 
-  <meta property="og:title" content="Hocott's Garden Center">
+  <meta property="og:title" content="Contact Hocott's Garden Center">
   <meta property="og:image" content="assets/includes/social-image.jpg">
   <meta property="og:image:alt" content="Hocott's Garden Center store owners smiling around geraniums.">
 
@@ -46,7 +46,7 @@
     </div>
   </div>
   </header>
-  <div id="primary-hero">
+  <div id="contact-hero">
     <section id="cta-section">
       <h2>Contact Us</h2>
     </section>
