--- a/hocotts/landscaping.html
+++ b/hocotts/landscaping.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   </header>
-  <div id="primary-hero">
+  <div id="landscaping-hero">
     <section id="cta-section">
       <h2>Let's build your dream garden together!</h2>
     </section>
