added gallery content adjusted home page spacing, external link rule, lanscaping contact form

--- a/hocotts/gallery.html
+++ b/hocotts/gallery.html
@@ -48,17 +48,25 @@
   </header>
   <div id="gallery-hero">
     <section id="cta-section">
-      <h2>Check out these beauties in store!</h2>
+      <h2>Explore our garden center gallery!</h2>
     </section>
   </div>
   <main>
     <section class="container">
+      <h3>Discover Our Vibrant Array of Flora</h3>
+      <p> From delicate houseplants to majestic trees, we've got everything you need to breathe life into your garden. Whether you're looking to create a cozy corner with hanging plants or add a splash of color with seasonal blooms, our gallery showcases the endless possibilities for your outdoor oasis.</p>
+      <img src="assets/img/gallery-landscape.jpg" class="img-center"/>
+      <h3>Check out these beauties in store!</h3>
       <section class="three-col-grid">
         <img src="assets/img/hydrangeas-2.jpg"/>
         <img src="assets/img/sunflower-decor.jpg"/>
         <img src="assets/img/peace-lilly.jpg"/>
       </div>
-      </section>  
+      </section>
+      <section class="callout">
+        <h3>Come visit us in store!</h3>
+        <a href="https://maps.app.goo.gl/heCcgLao4kE7Yj7n7" class="cta-button">Google Map Directions</a>
+    </section>
   </main>
   <footer>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13110.832723377938!2d-92.3310699!3d34.7629432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d2a36550a9f521%3A0x3a45e6fd2f8604d2!2sHocott&#39;s%20Garden%20Center!5e0!3m2!1sen!2sus!4v1714429733509!5m2!1sen!2sus" width="350" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
