added new footer code with icons and added to my project reflection

--- a/hocotts/404.html
+++ b/hocotts/404.html
@@ -16,52 +16,6 @@
 
   <link rel="icon" href="assets/includes/favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="assets/includes/icon.png">
-  <style>
-    * {
-      line-height: 1.2;
-      margin: 0;
-    }
-
-    html {
-      color: #888;
-      display: table;
-      font-family: sans-serif;
-      height: 100%;
-      text-align: center;
-      width: 100%;
-    }
-
-    body {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 2em auto;
-    }
-
-    h1 {
-      color: #555;
-      font-size: 2em;
-      font-weight: 400;
-    }
-
-    p {
-      margin: 0 auto;
-      width: 280px;
-    }
-
-    @media only screen and (max-width: 280px) {
-
-      body,
-      p {
-        width: 95%;
-      }
-
-      h1 {
-        font-size: 1.5em;
-        margin: 0 0 0.3em;
-      }
-
-    }
-  </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F49NXKQMNJ"></script>
@@ -74,7 +28,7 @@
 </script>
   <body>
     <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <p>Sorry, but the page you were trying to view doesn't exist. <a href="index.html">Go back home, friend.</a></p>
   </body>
   <footer>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13110.832723377938!2d-92.3310699!3d34.7629432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d2a36550a9f521%3A0x3a45e6fd2f8604d2!2sHocott&#39;s%20Garden%20Center!5e0!3m2!1sen!2sus!4v1714429733509!5m2!1sen!2sus" width="350" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -90,11 +44,15 @@
           </address>
         </div>
         Phone: <span itemprop="telephone">501-647-6171</span>
-      </div>
       <div class="hours">
         <p>Monday-Tuesday: Closed</p>
         <p>Wednesday-Saturday: 9:00am - 4:00pm</p>
         <p>Sunday: Closed</p>
+      </div>
+      </div>
+      <div class="social">
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
       </div>
     </div>
     <h6>
