--- a/hocotts/gallery.html
+++ b/hocotts/gallery.html
@@ -82,11 +82,15 @@
           </address>
         </div>
         Phone: <span itemprop="telephone">501-647-6171</span>
-      </div>
       <div class="hours">
         <p>Monday-Tuesday: Closed</p>
         <p>Wednesday-Saturday: 9:00am - 4:00pm</p>
         <p>Sunday: Closed</p>
+      </div>
+      </div>
+      <div class="social">
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
       </div>
     </div>
     <h6>
