--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -154,6 +154,7 @@
         <p>Wednesday-Saturday: 9:00am - 4:00pm</p>
         <p>Sunday: Closed</p>
       </div>
+      </div>
       <div class="social">
         <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
         <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
