fixed contact form and validation issues

--- a/hocotts/about.html
+++ b/hocotts/about.html
@@ -55,7 +55,7 @@
     <section id="content">
       <div class ="container">
         <h2>Nurturing Your Landscape Since 1939</h2>
-        <img src="assets/img/store-owners.jpg" class="img-right">
+        <img src="assets/img/store-owners.jpg" class="img-right" alt="smiling store owners in front of vibrant flowers.">
         <p>At Hocott's Garden Center, we take pride in treating your lawn as if it were our own. Established in 1939, we've been a cornerstone of the community, dedicated to providing top-notch landscaping services and premium garden supplies with a personal touch.</p>
         <h3>Our Commitment to Excellence</h3>
         <p>With decades of experience under our belt, we specialize in all aspects of landscaping design and maintenance. From conceptualization to execution, our team of skilled landscapers ensures every detail is meticulously attended to. We understand the importance of a well-maintained outdoor space, and we're here to make your vision a reality.</p>
@@ -69,15 +69,15 @@
       <p>Discover Your Green Oasis with Hocott's Garden Center. Whether you're looking to add a touch of greenery to your living room, create a vibrant patio garden, or enhance your outdoor landscape, our custom planters and carefully selected plants are sure to impress.</p>
       <div class="three-col-grid">
         <figure>
-          <img src="assets/img/houseplants-for-sale-450.jpg"/>
+          <img src="assets/img/houseplants-for-sale-450.jpg" alt="houseplants"/>
         <figcaption>Houseplants</figcaption>
         </figure>
         <figure>
-          <img src="assets/img/succulents-450.jpg"/>
+          <img src="assets/img/succulents-450.jpg" alt="succulents"/>
         <figcaption>Succulents</figcaption>
         </figure>
         <figure>
-          <img src="assets/img/hydrangeas-450.jpg"/>
+          <img src="assets/img/hydrangeas-450.jpg" alt="hydrangeas for sale"/>
         <figcaption>Outdoor Plants</figcaption>
         </figure>
       </div>
@@ -107,8 +107,8 @@
       </div>
       </div>
       <div class="social">
-        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
-        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg" alt="facebook icon"></a>
       </div>
     </div>
     <h6>
