--- a/hocotts/contact.html
+++ b/hocotts/contact.html
@@ -52,8 +52,8 @@
     </section>
   </div>
   <main>
-    <section class="container">
-      <iframe height="523" title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" sandbox="allow-popups-to-escape-sandbox allow-top-navigation allow-scripts allow-popups allow-forms allow-same-origin" src="https://klmerritt789.wufoo.com/embed/w1t1dnml0k1h6p7/"> <a href="https://klmerritt789.wufoo.com/forms/w1t1dnml0k1h6p7/">Fill out my Wufoo form!</a> </iframe>
+    <section id="contact-form" class="container">
+      <iframe title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" sandbox="allow-popups-to-escape-sandbox allow-top-navigation allow-scripts allow-popups allow-forms allow-same-origin" src="https://klmerritt789.wufoo.com/embed/w1t1dnml0k1h6p7/"> <a href="https://klmerritt789.wufoo.com/forms/w1t1dnml0k1h6p7/">Fill out my Wufoo form!</a> </iframe>
     </section>
   </main>
   <footer>
@@ -77,8 +77,8 @@
       </div>
       </div>
       <div class="social">
-        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
-        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg" alt="facebook icon"></a>
       </div>
     </div>
     <h6>
