--- a/hocotts/gallery.html
+++ b/hocotts/gallery.html
@@ -55,17 +55,17 @@
     <section class="container">
       <h3>Discover Our Vibrant Array of Flora</h3>
       <p> From delicate houseplants to majestic trees, we've got everything you need to breathe life into your garden. Whether you're looking to create a cozy corner with hanging plants or add a splash of color with seasonal blooms, our gallery showcases the endless possibilities for your outdoor oasis.</p>
-      <img src="assets/img/gallery-landscape.jpg" class="img-center"/>
+      <img src="assets/img/gallery-landscape.jpg" class="img-center" alt=""/>
       <h3>Check out these beauties in store!</h3>
       <section class="three-col-grid">
-        <img src="assets/img/hydrangeas-2.jpg"/>
-        <img src="assets/img/sunflower-decor.jpg"/>
-        <img src="assets/img/peace-lilly.jpg"/>
-      </div>
+        <img src="assets/img/hydrangeas-2.jpg" alt="pink hydrangeas in containers."/>
+        <img src="assets/img/sunflower-decor.jpg" alt="plants in store with sunflower windmill."/>
+        <img src="assets/img/peace-lilly.jpg" alt="lush peace lilly with multiple flowers for sale."/>
       </section>
       <section class="callout">
         <h3>Come visit us in store!</h3>
         <a href="https://maps.app.goo.gl/heCcgLao4kE7Yj7n7" class="cta-button">Google Map Directions</a>
+    </section>
     </section>
   </main>
   <footer>
@@ -89,8 +89,8 @@
       </div>
       </div>
       <div class="social">
-        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
-        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg" alt="facebook icon"></a>
       </div>
     </div>
     <h6>
