--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -156,8 +156,8 @@
       </div>
       </div>
       <div class="social">
-        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
-        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg" alt="facebook icon"></a>
       </div>
     </div>
     <h6>
