--- a/hocotts/landscaping.html
+++ b/hocotts/landscaping.html
@@ -55,7 +55,7 @@
     <section id="content">
       <div class ="container">
         <h2>Cultivating Beauty Since 1939</h2>
-        <img src="assets/img/coneflowers.jpg" class="img-right"/>
+        <img src="assets/img/coneflowers.jpg" class="img-right" alt=""/>
         <p>We don't just stop at providing stunning plants and planters—we're also your premier destination for expert landscaping services. With decades of experience under our belt, our team specializes in transforming outdoor spaces into lush, vibrant landscapes that reflect your unique style and personality.</p>
         <p>From initial consultation to final installation, we work closely with you to understand your vision and bring it to life. Whether you're dreaming of a serene garden retreat, a functional outdoor living area, or a colorful floral display, we have the expertise and creativity to make it a reality.</p>
         <p><strong>Our comprehensive landscaping services cover all aspects of design and maintenance, including:</strong></p>
@@ -74,17 +74,17 @@
       <p>Simply pick out the plants and planters that speak to you, and let us work our magic. We'll curate stunning arrangements that complement each other and thrive in your chosen environment. Whether you're looking to add a touch of greenery to your living room, create a vibrant patio garden, or enhance your outdoor landscape, our custom planters and carefully selected plants are sure to impress.</p>
       <div class="two-col-grid">
         <figure>
-          <img src="assets/img/hocotts-staff-planter-design.jpg"/>
+          <img src="assets/img/hocotts-staff-planter-design.jpg" alt="staff member smiling multiple plants arranged in a planter."/>
         </figure>
         <figure>
-          <img src="assets/img/multi-planter.jpg"/>
+          <img src="assets/img/multi-planter.jpg" alt="staff member smiling multiple plants arranged in a planter with red flowers."/>
         </figure>
       </div>
       <section>
       <h3>Let us cultivate beauty and tranquility in your home garden!</h3>
       <p>Visit our store to explore a diverse range of products. Use our contact form to inquire about our landscaping services.</p>
-      <section class="container">
-        <iframe height="523" title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" sandbox="allow-popups-to-escape-sandbox allow-top-navigation allow-scripts allow-popups allow-forms allow-same-origin" src="https://klmerritt789.wufoo.com/embed/w1t1dnml0k1h6p7/"> <a href="https://klmerritt789.wufoo.com/forms/w1t1dnml0k1h6p7/">Fill out my Wufoo form!</a> </iframe>
+      <section id="contact-form" class="container">
+        <iframe title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" sandbox="allow-popups-to-escape-sandbox allow-top-navigation allow-scripts allow-popups allow-forms allow-same-origin" src="https://klmerritt789.wufoo.com/embed/w1t1dnml0k1h6p7/"> <a href="https://klmerritt789.wufoo.com/forms/w1t1dnml0k1h6p7/">Fill out my Wufoo form!</a> </iframe>
       </section>
     </section>
   </main>
@@ -109,8 +109,8 @@
       </div>
       </div>
       <div class="social">
-        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg"></a>
-        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg"></a>
+        <a href="https://www.instagram.com/hocotts/?hl=en"><img src="assets/includes/instagram.svg" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/hocotts.ar/"><img src="assets/includes/facebook.svg" alt="facebook icon"></a>
       </div>
     </div>
     <h6>
