--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <p>For my website feedback, I reached out to three individuals for diverse perspectives: a coworker, my fiance, and a classmate. Each person provided valuable insights and suggestions. </p>
       <p>My coworker noted the website seemed more geared towards landscaping services than a garden center. To address this, I added more store plant images and CTA's to visit the store. If I have time I'm going to add a prominent section on the home page with store information above the fold. In my V2 update, I plan to expand product details and enhance the grid layout with additional images. I'd also like to bring in an image slider. I tried pulling in my slick.js demo from 1310, but I ran into some issues and ran out of time.</p>
       <p>My classmate recommended I adjust the spacing of my services section on my homepage since it was spaced out far on desktop, so I applied a max-midth property. He also recommended that I incorporate social media icons to make the footer look more polished and get more experience using SVGs.</p>
-      <p>My fiance gave me a thoughtful list of things to improve. I was able to get to a few of them, but I'm linking the lists for <a href="hocotts/assets/doc/hocotts-site-notes-tablet-phone.txt">tablet/mobile</a> and <a href="hocotts/assets/doc/hocott-website-notes-desktop.txt">desktop notes</a> here for myself because it's thorough and I don't have enough time to go through it all.</p>
+      <p>My fiance Isaac gave me the best most thorough list of things to improve. I was able to get address a few pressing things, but I'm linking the lists for <a href="hocotts/assets/doc/hocotts-site-notes-tablet-phone.txt">tablet/mobile</a> and <a href="hocotts/assets/doc/hocott-website-notes-desktop.txt">desktop notes</a> here for myself to revisit. One of the biggest issues he brought up was my "submit" button missing on my contact forms. I realized it was because I had a height set on the iframe that cut off the bottom. I instead added an id of content to the parent container and then added a css selector to set the height.</p>
       <h3>From Doubt to Design</h3>
       <p>Developing the Hocott's Garden Center website has been both challenging and rewarding, emphasizing the iterative nature of web development and the importance of persevering! If I had to do this process over again, I would start earlier to get the most out of this learning experience. It's a shame that I wasted time doubting myself and procrastinating, but I'm glad I was able to finish strong and I appreciate your help getting started. I definitely feel more comfortable sketching and using Figma for wireframing, breaking down my projects into design sprints, and managing my files in VS code environment. I am a web developer! (Just a fledgling, but man I'm flying!🐤)</p>
     </section>
@@ -102,7 +102,6 @@
       <p>I hope to continue these skills over the summer working on a Hocott's V2 site, and then this fall through the IT Technical Certification Program. Thanks for the great class!</p>
     </section>
   </section>
-  </content>
 </main>
 <footer class="primary">
   <p>&copy; 2024 | Kristena Merritt</p>
