added link hover state

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <section id="content" class="container">
       <section id="project-reflection">
-      <h2>Final Project Reflection (Hocott's Garden Center Website)</h2>
+      <h2>Final Project Reflection (<a href="hocotts/index.html">Hocott's Garden Center Website)</a></h2>
       <p>For my final, I developed a website for Hocott's Garden Center, an eclectic local business. I enjoy tending plants and I'm drawn to the beauty of nature, so I naturally gravitated towards gardening-related activities. I thought of Hocott's since I've visited them before and decided to check out their online presence, which wasn't bad but it needed some improvement. I enjoyed curating content for the site, but I was careful not to get sidetracked. It was easy to find tons of images and use ChatGPT to generate the copy.</p>
       <p>The intended audience is gardening lovers, people with outdoor spaces, eco-conscious consumers, and even local businesses eyeing the landscaping services. They're visiting the website to find out about store hours, location, contact info, and what type of plants are available.</p>
       <p><strong>The purpose of the website is to:</strong></p>
